--- a/css-exercises/flex/07-flex-layout-2/style.css
+++ b/css-exercises/flex/07-flex-layout-2/style.css
@@ -9,10 +9,13 @@ body {
 }
 
 .header {
-    height: 72px;
+    max-height: 72px;
     background: darkmagenta;
     color: white;
     flex: 0 0 auto;
+    font-size: larger;
+    font-weight: bolder;
+    padding: 15px;
 }
 
 .footer {
@@ -20,16 +23,57 @@ body {
     background: #eee;
     color: darkmagenta;
     flex: 0 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .sidebar {
     width: 300px;
     background: royalblue;
     box-sizing: border-box;
+    display: flex;
+    text-decoration: none;
+    flex: 0 0 auto;
+}
+.sidebar li a {
+    color: white;
+    text-decoration: none;
+    font-size: large;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .card {
     border: 1px solid #eee;
     box-shadow: 2px 4px 16px rgba(0, 0, 0, .06);
     border-radius: 4px;
+    flex: 1 1 auto;
+    width: 280px;
+    height: 280px;
+    padding: 15px;
+}
+.mid-content {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px; 
+    flex: 0 0 auto;
+    max-height: 810px;
+}
+.cards {
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+    flex: 1;
 }
