--- a/Foundations/LandingPage/styles.css
+++ b/Foundations/LandingPage/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 body,
@@ -19,30 +20,69 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%
+    width: 100%;
 }
 
 main div {
-    height: 200px;
+    height: 250px;
+    width: 100%;
+    padding: 0 15%;
 }
 
 .awesome {
     background-color: #1F2937;
+    flex: 0 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
+
+.awesome-img {
+    background-color: #E5E7EB;
+    height: 200px;
+    width: 300px;
+    padding: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.random {}
+
+.quote {
+    background-color: #E5E7EB;
+}
+
+.call-to-action {}
 
 header {
     display: flex;
     flex: 0 0 auto;
-    height: 100px;
+    height: 60px;
     background-color: #1F2937;
     justify-content: space-between;
-    padding: 0 18%;
+    padding: 0 15%;
+    align-items: center;
+}
+
+header h1 {
+    color: #F9FAF8;
+    font-size: 24px;
+}
+
+header ul {
+    list-style-type: none;
+    color: #E5E7EB;
+    display: flex;
+    gap: 10px;
 }
 
 footer {
     display: flex;
     flex: 0 0 auto;
     height: 50px;
-    background-color: #E5E7EB;
+    background-color: #1F2937;
 
 }
