--- a/Foundations/LandingPage/styles.css
+++ b/Foundations/LandingPage/styles.css
@@ -24,9 +24,9 @@ main {
 }
 
 main div {
-    height: 250px;
+    height: 400px;
     width: 100%;
-    padding: 0 15%;
+    padding: 0 10%;
 }
 
 .awesome {
@@ -35,13 +35,35 @@ main div {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 20px;
 
 }
 
+.awesome .text {
+    flex: 0 1 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+    text-align: left;
+    padding: 10px;
+}
+
+.awesome .text h1 {
+    color: #F9FAF8;
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.awesome .text p {
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
 .awesome-img {
-    background-color: #E5E7EB;
-    height: 200px;
-    width: 300px;
+    background-color: #7e7f81;
+    height: 250px;
+    width: 400px;
     padding: 0px;
     display: flex;
     justify-content: center;
@@ -49,21 +71,121 @@ main div {
     text-align: center;
 }
 
-.random {}
+.random {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    padding-top: 20px;
+    gap: 20px;
+}
+
+.random h1 {
+    flex: 1 1 auto;
+}
+
+.random .content-container {
+    flex: 1 1 90%;
+    display: flex;
+    gap: 10px;
+    padding: 0;
+    align-items: center;
+}
+
+.random .content {
+    flex: 1 1 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
+    padding: 5px;
+    height: 200px;
+
+}
+
+.random .content p {
+    flex: 1 1 0;
+
+}
+
+.content-img {
+    flex: 0 1 auto;
+    width: 100px;
+    height: 100px;
+    border: solid #3882F6 3px;
+    border-radius: 10px;
+}
 
 .quote {
     background-color: #E5E7EB;
 }
 
-.call-to-action {}
+.quote .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.quoteText {
+    font-style: italic;
+    color: #1F2937;
+    font-weight: 100;
+    font-size: 36px;
+}
+
+.credit {
+    font-weight: 300;
+    font-size: 20px;
+    align-self: end;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.banner {
+    background-color: #3882F6;
+    border-radius: 10px;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    gap: 100px;
+    justify-content: space-between;
+    padding: 10px 50px;
+}
+
+.banner .text {
+    flex: 1 1 0;
+    height: 100px;
+    color: #F9FAF8;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.banner button {
+    flex: 0 0 120px;
+    border: #E5E7EB solid 2px;
+    background-color: #3882F6;
+    padding: 10px 30px;
+    color: #E5E7EB;
+    border-radius: 10px;
+}
 
 header {
     display: flex;
     flex: 0 0 auto;
-    height: 60px;
+    height: 100px;
     background-color: #1F2937;
     justify-content: space-between;
-    padding: 0 15%;
+    padding: 0 10%;
     align-items: center;
 }
 
