--- a/Foundations/LandingPage/styles.css
+++ b/Foundations/LandingPage/styles.css
@@ -69,6 +69,7 @@ main div {
     justify-content: center;
     align-items: center;
     text-align: center;
+    border-radius: 10px;
 }
 
 .random {
